# fastapi-base

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  main.py  package-lock.json  package.json  pyproject.toml
app/: .env.example  main.py
app/config/: auth.py  settings.py
app/middleware/: authentication_middleware.py
app/modules/auth/: routes.py
app/modules/auth/providers/: auth0.py
app/modules/dashboard/: routes.py
app/modules/marketing_pages/: routes.py
app/templates/marketing_pages/: _base.html  index.html
singlepane/: main.py  settings.py
singlepane/modules/auth/: routes.py
singlepane/modules/auth/providers/: auth0.py
singlepane/modules/pages/: routes.py
