[tool.poetry]
name = "singlepane"
version = "0.1.0"
description = ""
authors = ["Brandon Braner <brandon.braner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Authlib = "^1.0.1"
python-dotenv = "^0.20.0"
httpx = "^0.23.0"
itsdangerous = "^2.1.2"
pre-commit = "^2.20.0"
auth0-python = "^3.23.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
bandit = "^1.7.4"
flake8 = "^5.0.4"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
pytest = "^7.1.2"
pyclean = "^2.2.0"
pytest-asyncio = "^0.19.0"

[tool.pycln]
all = true

[tool.black]
line-length = 140
target-version = ['py310']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
